[tool.poetry]
name = "librarymanagementsystem"
version = "0.1.0"
description = ""
authors = ["SivaMohan <sivamohan.mukkara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
